kubernetes/ingress/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true" # Enable regex for paths
spec:
  rules:
  - host: mybankingapp.com
    http:
      paths:
      - path: /accounts(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: account-service
            port:
              number: 81
      - path: /account-details(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: account-service
            port:
              number: 81
      - path: /authentication(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 82
      - path: /transaction(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: transaction-service
            port:
              number: 83
