kubernetes/ingress/multi-host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-ingress
  namespace: banking
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: accounts.demoprojectbc1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: account-service
            port:
              number: 81
  - host: transaction.demoprojectbc1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transaction-service
            port:
              number: 83
